// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VMenu.js should render component with custom absolute and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom activator and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom auto and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content v-menu__content--auto"
       style="max-height: 200px; min-width: 16px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom bottom and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom closeOnClick and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom closeOnContentClick and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom disabled and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom fullWidth and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom lazy and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom left and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom maxHeight and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: 100px; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom maxWidth and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: 100px; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom minWidth and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 100px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeBottom and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 100px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeLeft and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 12px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeRight and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 100px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeTop and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom nudgeWidth and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 100px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom offsetX and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom offsetY and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom openOnClick and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom openOnHover and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom origin and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom positionX and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom positionY and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom right and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom top and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should render component with custom transition and match snapshot 1`] = `

<div class="v-menu">
  <div class="v-menu__content"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 0; display: none;"
  >
  </div>
</div>

`;

exports[`VMenu.js should round dimensions 1`] = `"max-height: auto; min-width: 101px; max-width: auto; top: 12px; left: 50px; z-index: 8; display: none; z-index: 8;"`;

exports[`VMenu.js should work 1`] = `

<div class="v-menu">
  <div class="v-menu__activator v-menu__activator--active">
    <button type="button"
            class="v-btn"
    >
      <div class="v-btn__content">
      </div>
    </button>
  </div>
  <div class="v-menu__content menuable__content__active"
       style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; z-index: 8; display: none; z-index: 8;"
  >
    <div class="v-card">
    </div>
  </div>
</div>

`;
